tests/fails/f23.t
require("fail")

terra foo()
    @(3) = 4
end
foo()
